[package]
name = "socha-client-2021"
version = "0.1.0"
authors = ["fwcd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
log = "0.4.8"
xml-rs = "0.8.0"
simplelog = "0.11"
rand = "0.8"
arrayvec = "0.7"
itertools = "0.10"
regex = "1.4"
lazy_static = "1.4"
